--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-@author Samuel Lampa <samuel.lampa@scilifelab.uu.se>
+@author Samuel Lampa <samuel.lampa@gmail.com>
 
 Convenience tools for working with the arc SRM client (commands such as ngls, or arcls etc)
